[gd_scene load_steps=2 format=3 uid="uid://cxapd2pdvykt8"]

[ext_resource type="Script" uid="uid://bpiij1d0peev4" path="res://scripts/globals/ComputerUI.gd" id="1_ghygu"]

[node name="ComputerUI" type="CanvasLayer" groups=["computer_ui"]]
layer = 10
script = ExtResource("1_ghygu")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.00392157, 0.501961)

[node name="Center" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Window" type="PanelContainer" parent="Center"]
custom_minimum_size = Vector2(640, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Center/Window"]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="Center/Window/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Center/Window/VBoxContainer/TitleBar"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Center/Window/VBoxContainer/TitleBar"]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="Center/Window/VBoxContainer"]
layout_mode = 2

[node name="ExecuteTrade" type="Button" parent="Center/Window/VBoxContainer/Content"]
layout_mode = 2

[node name="ResultLabel" type="Label" parent="Center/Window/VBoxContainer/Content"]
layout_mode = 2

[node name="Footer" type="HBoxContainer" parent="Center/Window/VBoxContainer"]
layout_mode = 2

[node name="Close" type="Button" parent="Center/Window/VBoxContainer/Footer"]
layout_mode = 2
